﻿Changelog
2.0.6
Added proper navigation for seperate chapters/storylines for comics, and options to display on home page
made featured images in the rss feed be 'thumbnails' instead of full images
modified the header browser line for <title> only show the - description if there *is* a description
added google translate widget

2.0.5
Fixing CSS
adding checks if the sidebar is active before executing so that if it's not active the html isnt displayed

2.0.4
moved the site description to *under* the h1 in the header
added slider to the comic showcase - the showcase is meant to be example of addons someone can make
fixed loading of what loads when in the functions.php - cause it was fatal erroring out on duplicate functions
added header-info class to wrap around the header, erm.. information
added all custom post type formats to be found on author pages

2.0
Fixed the archive page to know the difference between a permalink category and non-permalink cat=
fixed site_url to home_url in the header.php thanks @mike on the forums
added layouts so you can switch between a few different layouts, 3col and 2col
control panel widget change to use wp_login_form()
bug fix from @fred on the forums, the $height wasnt passing properly for the custom header
added schemes, default, ocean and desert
fixed commpress casts to only set to casts on category output
adjusted widths of menu items to not take up as much room as it each menu item was
removed the content stripping of <p> and </p>, leaving them in the [members] code whether they validate or not
added posted at time in posts, disables by option for the remove date also can be disabled via css
removed the text-transform to capitalize from the page-title/post-title
added the scheme 'greymatter'
fixed it so that gravatars are able to be seen (author gravatars) in IE

1.1.7