@@ -4,6 +4,9 @@ Added proper navigation for seperate chapters/storylines for comics, and options
 made featured images in the rss feed be 'thumbnails' instead of full images
 modified the header browser line for <title> only show the - description if there *is* a description
 added google translate widget
+internalization fix for the wp-pagenavi code, removal of adding it as an db save
+menunav moved below execution of the wp_nav_menu now so that if it does scroll over the menunav displays below and not the menu
+added enable social icons in menubar as an option now with input boxes instead of end users adding to child theme
 
 2.0.5
 Fixing CSS
